change app scheme and orientation

--- a/app.json
+++ b/app.json
@@ -3,9 +3,9 @@
     "name": "pro-scorer",
     "slug": "pro-scorer",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "landscape",
     "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "scheme": "pro.scorer",
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/images/splash.png",
